# messenger

./: README.md  auth.cpp  auth.h  docker-compose.yml  package-lock.json  package.json  server.js  start_services.sh
config/: auth.conf  env.php  messaging.conf
data/: contacts.json  messages.json  users.json
database/: db_connector.cpp  db_connector.h  schema.sql
server/: CMakeLists.txt
server/auth/: AuthService.cpp  AuthService.h  main.cpp
server/messaging/: MessageService.h  MessagingService.cpp  MessagingService.h  main.cpp
src/: App.js  styles.css
src/components/: ButtonPage1.jsx  ButtonPage2.jsx  ButtonPage3.jsx  Chat.jsx  Login.jsx
web/: index.html  login.html  manifest.json  messenger.html  offline.html  register.html  service-worker.js
web/app/: App.php  Auth.php  Controller.php  Database.php  Model.php  Router.php  View.php  bootstrap.php  helpers.php
web/app/Controllers/: AuthController.php
web/app/Models/: User.php
web/public/: index.php
web/public/css/: style.css
web/public/js/: app.js  auto-login.js  notifications.js
web/views/: home.php
web/views/auth/: forgot_password.php  login.php  register.php  reset_password.php
web/views/layouts/: main.php
